--- a/asl.html
+++ b/asl.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hand Tracking / ASL Alphabet Detection - Josh Aney</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <script src="js/slideshow.js"></script>
 
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">About Me</a></li>
-            <li><a href="personal_projects.html">Personal Projects</a></li>
-            <li><a href="images/resume.pdf" target="_blank">Resume</a></li>
-        </ul>
-    </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Josh Aney</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="personal_projects.html">Personal Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="images/resume.pdf" target="_blank">Resume</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<main>
-
-    <div id="asl" class="container">
+<div class="container">
+    <main>
         <section class="project">
             <h2>Hand Tracking / ASL Alphabet Detection</h2>
             <p><strong>Description</strong>: For this project I developed a real-time ASL alphabet detection system
@@ -39,7 +48,6 @@
                 letter as well as a progress bar indicating gesture recognition confidence over time.</p>
 
             <div class="slideshow-container asl_detection">
-
                 <div class="mySlides fade-slide" data-caption="Hand Landmark Detection">
                     <img src="images/ASL_detection/hand_tracking.png" class="slideshow-img">
                 </div>
@@ -53,7 +61,6 @@
                     <a class="next" onclick="showSlide('.asl_detection', 1)">&#10095;</a>
                     <span class="caption"></span>
                 </div>
-
             </div>
 
             <p><strong>Technologies</strong>: Python, OpenCV, Tensorflow, MediaPipe, Numpy, Human Computer Interaction
@@ -64,23 +71,23 @@
 
             <div class="text-center mt-5 mb-4">
                 <a href="personal_projects.html" class="btn btn-primary">
-                    ← Back to Personal Projects
+                    &larr; Back to Personal Projects
                 </a>
             </div>
         </section>
-    </div>
-
-</main>
+    </main>
+</div>
 
 <footer class="footer">
-    <div class="footer-bottom">
-        <p>© 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
-                href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
-                href="https://github.com/joshaney324">joshaney324</a></p>
+    <div class="container">
+        <div class="footer-bottom">
+            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
+                    href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
+                    href="https://github.com/joshaney324">joshaney324</a></p>
+        </div>
     </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
 </html>
