--- a/index.html
+++ b/index.html
@@ -1,82 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Josh Aney</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">About Me</a></li>
-            <li><a href="personal_projects.html">Personal Projects</a></li>
-            <li><a href="images/resume.pdf" target="_blank">Resume</a></li>
-        </ul>
-    </nav>
-</header>
-
-<main>
+<nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-        <section class="profile">
-            <img src="images/profile_image.jpg" alt="Profile Picture">
-            <br>
-            <h1>Josh Aney</h1>
-            <div style="text-align: left;">
-                <p><strong>Education:</strong> Montana State University</p>
-                <p><strong>Major:</strong> Computer Science</p>
-                <p><strong>Email: </strong><a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a></p>
-                <p><strong>Phone: </strong><a href="tel:+5075130517">(507)-513-0517</a></p>
-            </div>
-            <p>
-                <a href="https://github.com/joshaney324"><i class="fab fa-github fa-2x"></i></a>
-                <a href="https://www.linkedin.com/in/josh-aney-67801528b"><i class="fab fa-linkedin fa-2x"></i></a>
-            </p>
-        </section>
-
-        <section class="bio">
-            <h2>About Me</h2>
-            <p>My name is Josh Aney, and I am currently a computer science student at Montana State University.
-                I am in my third year and I plan on graduating in the spring of 2026. Ever since I have been young, I
-                have always been fascinated with how computers, video games, or any other sort of software worked. I
-                could tell from a young age that I would be interested in pushing the limits of technology and applying
-                it into my own day-to-day life to solve problems</p>
-            <p>When I am not completing school work or working on other projects, I enjoy spending time outdoors. I love
-                getting out into the mountains to ski or bike. I live for any sort of adventures that will get me outside</p>
-            <h2>Academic Interests</h2>
-            <p>In school, I have grown to be very interested in the world of machine learning. I enjoy working with a
-                group of my peers to solve a problem that is given to us. Working in a group gives me a chance to bounce ideas
-                off of other people to allow me to find new ways to manipulate a dataset or approach a certain challenge.
-                I also love getting to work with the math involved in many of these problems. I had the opportunity to
-                code a few common machine learning algorithms from scratch, and it truly gave me a new perspective of
-                why math is so important in my everyday life.</p>
-            <h2>Professional Experience</h2>
-            <p>I am currently working with the CaMP (Cybernetics and Motor Physiology) lab
-                at Mayo Clinic. I worked with Dr. Kai Miller on a research project that involved me analyzing voltage
-                traces from the brain with different machine learning techniques. This experience taught me a lot about
-                how to handle real world challenges that could be faced when working in the machine learning field. I
-                often had to work with small datasets that would have missing values or noisy data. This caused me to be
-                very conscious on how I trained the models and how I chose which models to use.</p>
-            <h2>Extracurricular Activities</h2>
-            <p>For the past two years, I have been able to be a part of the Spirit of the West Drumline. I started
-                playing musical instruments at a young age, and I have been hooked ever since. I now have the privilege
-                of playing snare drum at all of Montana State University's home football games which has been one of the
-                best experiences of my entire life.</p>
-            <p>I am also Co-President of the Montana State Club Tennis Team. Sports have always been a large part of my
-                life since a young age, and I am so happy that I am able to give students an opportunity to continue playing
-                or pick up tennis at a low cost when they come to college.</p>
-        </section>
+        <a class="navbar-brand" href="index.html">Josh Aney</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="personal_projects.html">Personal Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="images/resume.pdf" target="_blank">Resume</a>
+                </li>
+            </ul>
+        </div>
     </div>
-</main>
+</nav>
+
+<div class="container">
+    <main>
+        <div class="row">
+            <div class="col-lg-4">
+                <section class="profile">
+                    <img src="images/profile_image.jpg" alt="Profile Picture">
+                    <h1>Josh Aney</h1>
+                    <div class="text-start mx-auto" style="max-width: 280px;">
+                        <p><strong>Education:</strong> Montana State University</p>
+                        <p><strong>Major:</strong> Computer Science</p>
+                        <p><strong>Email: </strong><a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a></p>
+                        <p><strong>Phone: </strong><a href="tel:+5075130517">(507)-513-0517</a></p>
+                    </div>
+                    <div class="social-icons mt-2">
+                        <a href="https://github.com/joshaney324" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/josh-aney-67801528b" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </section>
+            </div>
+
+            <div class="col-lg-8">
+                <section class="bio">
+                    <h2>About Me</h2>
+                    <p>My name is Josh Aney, and I am currently a computer science student at Montana State University.
+                        I am in my third year and I plan on graduating in the spring of 2026. Ever since I have been young, I
+                        have always been fascinated with how computers, video games, or any other sort of software worked. I
+                        could tell from a young age that I would be interested in pushing the limits of technology and applying
+                        it into my own day-to-day life to solve problems</p>
+                    <p>When I am not completing school work or working on other projects, I enjoy spending time outdoors. I love
+                        getting out into the mountains to ski or bike. I live for any sort of adventures that will get me outside</p>
+                    <h2>Academic Interests</h2>
+                    <p>In school, I have grown to be very interested in the world of machine learning. I enjoy working with a
+                        group of my peers to solve a problem that is given to us. Working in a group gives me a chance to bounce ideas
+                        off of other people to allow me to find new ways to manipulate a dataset or approach a certain challenge.
+                        I also love getting to work with the math involved in many of these problems. I had the opportunity to
+                        code a few common machine learning algorithms from scratch, and it truly gave me a new perspective of
+                        why math is so important in my everyday life.</p>
+                    <h2>Professional Experience</h2>
+                    <p>I am currently working with the CaMP (Cybernetics and Motor Physiology) lab
+                        at Mayo Clinic. I worked with Dr. Kai Miller on a research project that involved me analyzing voltage
+                        traces from the brain with different machine learning techniques. This experience taught me a lot about
+                        how to handle real world challenges that could be faced when working in the machine learning field. I
+                        often had to work with small datasets that would have missing values or noisy data. This caused me to be
+                        very conscious on how I trained the models and how I chose which models to use.</p>
+                    <h2>Extracurricular Activities</h2>
+                    <p>For the past two years, I have been able to be a part of the Spirit of the West Drumline. I started
+                        playing musical instruments at a young age, and I have been hooked ever since. I now have the privilege
+                        of playing snare drum at all of Montana State University's home football games which has been one of the
+                        best experiences of my entire life.</p>
+                    <p>I am also Co-President of the Montana State Club Tennis Team. Sports have always been a large part of my
+                        life since a young age, and I am so happy that I am able to give students an opportunity to continue playing
+                        or pick up tennis at a low cost when they come to college.</p>
+                </section>
+            </div>
+        </div>
+    </main>
+</div>
 
 <footer class="footer">
-    <div class="footer-bottom">
-        <p>© 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a href="https://github.com/joshaney324">joshaney324</a></p>
+    <div class="container">
+        <div class="footer-bottom">
+            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a href="https://github.com/joshaney324">joshaney324</a></p>
+        </div>
     </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
