--- a/ml_1.html
+++ b/ml_1.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naive Bayes - Josh Aney</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <script src="js/slideshow.js"></script>
-<!--test-->
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">About Me</a></li>
-            <li><a href="personal_projects.html">Personal Projects</a></li>
-            <li><a href="images/resume.pdf" target="_blank">Resume</a></li>
-        </ul>
-    </nav>
-</header>
 
-<main>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Josh Aney</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="personal_projects.html">Personal Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="images/resume.pdf" target="_blank">Resume</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-
-
-    <div id="ml_1" class="container">
+<div class="container">
+    <main>
         <section class="project">
             <h2>Machine Learning Project 1 - Naive Bayes</h2>
             <p><strong>Description:</strong> For this project, I worked in a team with another student at Montana State
@@ -50,14 +56,10 @@
                 then mixing up the order of that given attribute. We then performed the experiment one more time to test
                 how our Naive Bayes model performed with more noise.</p>
             <br>
-            <!--            <p>The full design document for this project can be found <a href="images/ml_1/Project%201%20Design%20Document.pdf" target="_blank">here</a>.</p>-->
-            <!--            <br>-->
             <p><strong>Results:</strong> Our Naive Bayes model performed well on all the datasets with a slight decrease
                 in performance with the simulated noise.</p>
 
-
             <div class="slideshow-container ml_1">
-
                 <div class="mySlides fade-slide" data-caption="Original Data Averages">
                     <img src="images/ml_1/original_data_avgs.svg" class="slideshow-img">
                 </div>
@@ -71,39 +73,33 @@
                     <a class="next" onclick="showSlide('.ml_1', 1)">&#10095;</a>
                     <span class="caption"></span>
                 </div>
-
             </div>
 
-
             <br>
-
             <p><strong>Technologies</strong>: Python, Numpy, Matplotlib, UML, Latex</p>
             <br>
-
             <p><strong>Note</strong>: If you would like to see the full design document, code base, and research paper that goes with this project please feel free to reach out to me by email.</p>
-
             <br>
+
             <div class="text-center mt-5 mb-4">
                 <a href="personal_projects.html" class="btn btn-primary">
-                    ← Back to Personal Projects
+                    &larr; Back to Personal Projects
                 </a>
             </div>
-
-            <!--            <p>The full results from this experiment can be found <a href="images/ml_1/ml_paper_1.pdf" target="_blank">here</a></p>-->
         </section>
-    </div>
-
-</main>
+    </main>
+</div>
 
 <footer class="footer">
-    <div class="footer-bottom">
-        <p>© 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
-                href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
-                href="https://github.com/joshaney324">joshaney324</a></p>
+    <div class="container">
+        <div class="footer-bottom">
+            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
+                    href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
+                    href="https://github.com/joshaney324">joshaney324</a></p>
+        </div>
     </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
 </html>
