--- a/ml_4.html
+++ b/ml_4.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comparison of Neural Network Training Methods - Josh Aney</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <script src="js/slideshow.js"></script>
 
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">About Me</a></li>
-            <li><a href="personal_projects.html">Personal Projects</a></li>
-            <li><a href="images/resume.pdf" target="_blank">Resume</a></li>
-        </ul>
-    </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Josh Aney</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="personal_projects.html">Personal Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="images/resume.pdf" target="_blank">Resume</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<main>
-
-    <div id="ml_4" class="container">
+<div class="container">
+    <main>
         <section class="project">
             <h2>Machine Learning Project 4 - A Comparison of Neural Network Training Methods</h2>
             <p><strong>Description</strong>: For this project, I worked in a team with two other students at Montana
@@ -45,13 +54,11 @@
                 we only tuned a small amount of the available hyperparameters. Once again we performed 10-fold cross
                 validation on all the datasets and then compared the results across all the training methods.</p>
             <br>
-            <!--            <p>The full design document for this project can be found <a href="images/ml_4/ML%20Project%204%20Design%20Doc.pdf" target="_blank">here</a>.</p>-->
-            <!--            <br>-->
             <p><strong>Results</strong>: The performance of the models was really variable. Datasets that tended to
                 overfit with backpropagation would often perform better with population based methods and datasets that
                 were relatively simple would often perform drastically better with backpropagation.</p>
-            <div class="slideshow-container ml_4">
 
+            <div class="slideshow-container ml_4">
                 <div class="mySlides fade-slide" data-caption="Breast Cancer Dataset Performance">
                     <img src="images/ml_4/BreastCancerAccuracy.png" class="slideshow-img">
                 </div>
@@ -81,39 +88,33 @@
                     <a class="next" onclick="showSlide('.ml_4', 1)">&#10095;</a>
                     <span class="caption"></span>
                 </div>
-
             </div>
 
             <br>
-
             <p><strong>Technologies</strong>: Python, Numpy, Matplotlib, UML, Latex</p>
-
             <br>
-
             <p><strong>Note</strong>: If you would like to see the full design document, code base, and research paper that goes with this project please feel free to reach out to me by email.</p>
-
             <br>
+
             <div class="text-center mt-5 mb-4">
                 <a href="personal_projects.html" class="btn btn-primary">
-                    ← Back to Personal Projects
+                    &larr; Back to Personal Projects
                 </a>
             </div>
-
-            <!--            <p>The full results from this experiment can be found <a href="images/ml_4/ml_paper_4.pdf" target="_blank">here</a></p>-->
         </section>
-    </div>
-
-</main>
+    </main>
+</div>
 
 <footer class="footer">
-    <div class="footer-bottom">
-        <p>© 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
-                href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
-                href="https://github.com/joshaney324">joshaney324</a></p>
+    <div class="container">
+        <div class="footer-bottom">
+            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
+                    href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
+                    href="https://github.com/joshaney324">joshaney324</a></p>
+        </div>
     </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
 </html>
