--- a/personal_projects.html
+++ b/personal_projects.html
@@ -1,218 +1,183 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Projects - Josh Aney</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
 
-<script src="js/slideshow.js"></script>
-
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">About Me</a></li>
-            <li><a href="personal_projects.html">Personal Projects</a></li>
-            <li><a href="images/resume.pdf" target="_blank">Resume</a></li>
-        </ul>
-    </nav>
-</header>
-
-<main>
-
-    <h1>Personal Projects and Academic Projects</h1>
-    <br>
-
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-
-        <div class="col">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Bike Trails Web Application</h5>
-                    <ul>
-                        <li>C#, HTML, CSS, SQL</li>
-                        <li>ASP.NET Core</li>
-                        <li>Entity Framework Core</li>
-                        <li>Mapbox, GPX Parsing</li>
-                    </ul>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="bike_webapp.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <a href="https://github.com/joshaney324/bike_trail_webapp.git" class="btn btn-outline-secondary"
-                       target="_blank">GitHub</a>
-                </div>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Josh Aney</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="personal_projects.html">Personal Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="images/resume.pdf" target="_blank">Resume</a>
+                </li>
+            </ul>
         </div>
-
-        <div class="col">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Hand Tracking / ASL Alphabet Detection</h5>
-                    <ul>
-                        <li>Python</li>
-                        <li>Dataset Creation</li>
-                        <li>Data Preprocessing</li>
-                        <li>Tensorflow</li>
-                        <li>MediaPipe</li>
-                    </ul>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="asl.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <a href="https://github.com/joshaney324/HandTracking" class="btn btn-outline-secondary"
-                       target="_blank">GitHub</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Neural Network From Scratch</h5>
-                    <ul>
-                        <li>Python, UML, NumPy</li>
-                        <li>Data Preprocessing: Data Imputation, One-Hot Encoding, Data Normalization</li>
-                        <li>Backpropagation</li>
-                        <li>Technical Writing</li>
-                    </ul>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="ml_3.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Experimenting With Neural Network Training Methods</h5>
-                    <ul>
-                        <li>Python, UML, NumPy</li>
-                        <li>Data Preprocessing: Data Imputation, One-Hot Encoding, Data Normalization</li>
-                        <li>Backpropagation</li>
-                        <li>Genetic Algorithm</li>
-                        <li>Particle Swarm Optimization</li>
-                        <li>Technical Writing</li>
-                    </ul>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="ml_4.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Naive Bayes Model From Scratch</h5>
-                    <ul>
-                        <li>Python, UML, Numpy</li>
-                        <li>Probability Theory</li>
-                        <li>Data Preprocessing: Data Imputation, Binning</li>
-                        <li>Technical Writing</li>
-                    </ul>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="ml_1.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">K-Nearest-Neighbors Methods From Scratch</h5>
-                    <ul>
-                        <li>Python, UML, Numpy</li>
-                        <li>Data Imputation, One-Hot Encoding, Normalization</li>
-                        <li>KNN Classification and Regression</li>
-                        <li>K-Means Clustering</li>
-                        <li>Technical Writing</li>
-                    </ul>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="ml_2.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Reinforcement Learning From Scratch on Grid racetrack Problem</h5>
-                    <ul>
-                        <li>Python, Numpy</li>
-                        <li>Technical Writing</li>
-                        <li>Linear Algebra</li>
-                        <li>Q-Learning, SARSA, Value Iteration</li>
-                    </ul>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="ai_rl.html" class="btn btn-outline-primary" target="_self">View Project</a>
-    <!--                <a href="https://github.com/joshaney324/bike_trail_webapp.git" class="btn btn-outline-secondary"-->
-    <!--                   target="_blank">GitHub</a>-->
-                </div>
-            </div>
-        </div>
-
-
-
-    <!-- Repeat similarly for ml_3, ml_4, bike-webapp, asl, unity if needed -->
     </div>
+</nav>
 
+<div class="container">
+    <main>
+        <h1>Personal Projects and Academic Projects</h1>
 
-    <!--    <div id="unity" class="container">-->
-    <!--        <section class="project">-->
-    <!--            <h2>Unity Project</h2>-->
-    <!--            <p><strong>Description</strong>: This project is currently a work in progress. I am working on building a-->
-    <!--                game that can be learned by an AI agent. Currently, the base game is built with user input in mind-->
-    <!--                instead of an AI agent. The goal of the game is to pick up collectibles and not get caught by an-->
-    <!--                antagonist.</p>-->
+        <div class="row row-cols-1 row-cols-md-2 g-4">
 
-    <!--            <div class="slideshow-container unity">-->
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Bike Trails Web Application</h5>
+                        <ul>
+                            <li>C#, HTML, CSS, SQL</li>
+                            <li>ASP.NET Core</li>
+                            <li>Entity Framework Core</li>
+                            <li>Mapbox, GPX Parsing</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="bike_webapp.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                        <a href="https://github.com/joshaney324/bike_trail_webapp.git" class="btn btn-outline-secondary"
+                           target="_blank">GitHub</a>
+                    </div>
+                </div>
+            </div>
 
-    <!--                <div class="mySlides fade" data-caption="Unity UI">-->
-    <!--                    <img src="images/roll_a_ball/ui.png" class="slideshow-img">-->
-    <!--                </div>-->
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Hand Tracking / ASL Alphabet Detection</h5>
+                        <ul>
+                            <li>Python</li>
+                            <li>Dataset Creation</li>
+                            <li>Data Preprocessing</li>
+                            <li>Tensorflow</li>
+                            <li>MediaPipe</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="asl.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                        <a href="https://github.com/joshaney324/HandTracking" class="btn btn-outline-secondary"
+                           target="_blank">GitHub</a>
+                    </div>
+                </div>
+            </div>
 
-    <!--                <div class="mySlides fade" data-caption="Roll A Ball gameplay">-->
-    <!--                    <img src="images/roll_a_ball/gameplay.png" class="slideshow-img">-->
-    <!--                </div>-->
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Neural Network From Scratch</h5>
+                        <ul>
+                            <li>Python, UML, NumPy</li>
+                            <li>Data Preprocessing: Data Imputation, One-Hot Encoding, Data Normalization</li>
+                            <li>Backpropagation</li>
+                            <li>Technical Writing</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="ml_3.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    </div>
+                </div>
+            </div>
 
-    <!--                <div style="padding-top: 20px">-->
-    <!--                    <a class="prev" onclick="showSlide('.unity', -1)">&#10094;</a>-->
-    <!--                    <a class="next" onclick="showSlide('.unity', 1)">&#10095;</a>-->
-    <!--                    <span class="caption"></span>-->
-    <!--                </div>-->
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Experimenting With Neural Network Training Methods</h5>
+                        <ul>
+                            <li>Python, UML, NumPy</li>
+                            <li>Data Preprocessing: Data Imputation, One-Hot Encoding, Data Normalization</li>
+                            <li>Backpropagation</li>
+                            <li>Genetic Algorithm</li>
+                            <li>Particle Swarm Optimization</li>
+                            <li>Technical Writing</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="ml_4.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    </div>
+                </div>
+            </div>
 
-    <!--            </div>-->
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Naive Bayes Model From Scratch</h5>
+                        <ul>
+                            <li>Python, UML, Numpy</li>
+                            <li>Probability Theory</li>
+                            <li>Data Preprocessing: Data Imputation, Binning</li>
+                            <li>Technical Writing</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="ml_1.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    </div>
+                </div>
+            </div>
 
-    <!--            <p><strong>Technologies</strong>: C#, Unity Physics</p>-->
-    <!--            <p><strong>Future Additions</strong>: As stated above the goal will be to build a PPO (Proximal Policy Optimization)-->
-    <!--                model to train an AI Agent to beat the game. To do this I will need to build randomized maps as well as-->
-    <!--                randomized collectible placements to allow the model to not overfit.</p>-->
-    <!--        </section>-->
-    <!--    </div>-->
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">K-Nearest-Neighbors Methods From Scratch</h5>
+                        <ul>
+                            <li>Python, UML, Numpy</li>
+                            <li>Data Imputation, One-Hot Encoding, Normalization</li>
+                            <li>KNN Classification and Regression</li>
+                            <li>K-Means Clustering</li>
+                            <li>Technical Writing</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="ml_2.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    </div>
+                </div>
+            </div>
 
-</main>
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Reinforcement Learning From Scratch on Grid racetrack Problem</h5>
+                        <ul>
+                            <li>Python, Numpy</li>
+                            <li>Technical Writing</li>
+                            <li>Linear Algebra</li>
+                            <li>Q-Learning, SARSA, Value Iteration</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="ai_rl.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+</div>
 
 <footer class="footer">
-    <div class="footer-bottom">
-        <p>© 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
-                href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
-                href="https://github.com/joshaney324">joshaney324</a></p>
+    <div class="container">
+        <div class="footer-bottom">
+            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
+                    href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
+                    href="https://github.com/joshaney324">joshaney324</a></p>
+        </div>
     </div>
 </footer>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
